<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.mateu.erp</groupId>
    <artifactId>all</artifactId>
    <version>0.0.2-SNAPSHOT</version>
    <modules>
        <module>model</module>
        <module>traductor-caval-out</module>
        <module>dispo-tester</module>
        <module>show</module>
        <module>traductor-caval-in</module>
        <module>traductor-ota-in</module>
        <module>nodo-dispo</module>
    </modules>

    <packaging>pom</packaging>

    <distributionManagement>
        <repository>
            <uniqueVersion>false</uniqueVersion>
            <id>mateu-central</id>
            <url>http://nexus.mateu.io/repository/mateu-central/</url>
            <layout>default</layout>
        </repository>
        <snapshotRepository>
            <uniqueVersion>true</uniqueVersion>
            <id>mateu-central</id>
            <url>http://nexus.mateu.io/repository/mateu-central/</url>
            <layout>default</layout>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>mateu-central</id>
            <url>http://nexus.mateu.io/repository/mateu-central</url>
        </repository>
    </repositories>

    <properties>
        <kotlin.version>1.2.30</kotlin.version>
        <junit.version>4.12</junit.version>
    </properties>



    <dependencies>
        <dependency>
            <groupId>io.mateu.jpa-utils</groupId>
            <artifactId>pujoiner-plugin</artifactId>
            <version>0.0.1</version>
        </dependency>


        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit</artifactId>
            <version>${kotlin.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>



    <build>
        <plugins>


            <plugin>
                <artifactId>kotlin-maven-plugin</artifactId>
                <groupId>org.jetbrains.kotlin</groupId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals> <goal>compile</goal> </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals> <goal>test-compile</goal> </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>

                    <compilerArgs>
                        <!--
                        <arg>-verbose</arg>
                        <arg>-Xlint:all,-options,-path</arg>
                        -->
                        <arg>-parameters</arg>
                    </compilerArgs>

                </configuration>
                <executions>
                    <!-- Replacing default-compile as it is treated specially by maven -->
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <!-- Replacing default-testCompile as it is treated specially by maven -->
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>java-compile</id>
                        <phase>compile</phase>
                        <goals> <goal>compile</goal> </goals>
                    </execution>
                    <execution>
                        <id>java-test-compile</id>
                        <phase>test-compile</phase>
                        <goals> <goal>testCompile</goal> </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


</project>